--- a/CAP.Yencon/Properties/Resources.ja.resx
+++ b/CAP.Yencon/Properties/Resources.ja.resx
@@ -118,24 +118,24 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="YArray_GetNode_ArgumentOutOfRangeException" xml:space="preserve">
-    <value>YArray_GetNode_ArgumentOutOfRangeException {0} {1} {2}</value>
+    <value>引数「{2}」の値は0以上{1}未満である必要があります。渡された実際の値は{0}です。</value>
   </data>
   <data name="YArray_GetNode_NullReferenceException" xml:space="preserve">
-    <value>YArray_GetNode_NullReferenceException</value>
+    <value>ノードの取得に失敗しました。戻り値が null です。</value>
   </data>
   <data name="YNode_ArgumentException" xml:space="preserve">
-    <value>YNode_ArgumentException {0}</value>
+    <value>親ノードはセクションまたは配列である必要があります。引数名：「{0}」</value>
   </data>
   <data name="YNode_ArgumentNullException" xml:space="preserve">
-    <value>YNode_ArgumentNullException {0}</value>
+    <value>セクション以外のノードは親セクションまたは親配列を指定する必要があります。引数名：「{0}」</value>
   </data>
   <data name="YSection_GetNode_KeyNotFoundException" xml:space="preserve">
-    <value>YSection_GetNode_KeyNotFoundException {0}</value>
+    <value>指定された名前「{0}」のノードは存在しません。</value>
   </data>
   <data name="YSection_GetNode_NullReferenceException" xml:space="preserve">
-    <value>YSection_GetNode_NullReferenceException</value>
+    <value>ノードの取得に失敗しました。戻り値が null です。</value>
   </data>
   <data name="YSection_KeyNameEnumerator" xml:space="preserve">
-    <value>YSection_KeyNameEnumerator</value>
+    <value>ノード名の列挙中にセクションの操作が行われました。</value>
   </data>
 </root>
