--- a/CAP.Yencon/Properties/Resources.en.resx
+++ b/CAP.Yencon/Properties/Resources.en.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidNodeNameException" xml:space="preserve">
+    <value>Cannot use the specified node name "{0}".</value>
+  </data>
   <data name="YArray_GetNode_ArgumentOutOfRangeException" xml:space="preserve">
     <value>The value of the parameter "{2}" should be greater than or equal to 0 and less than {1}. The actual value is {0}.</value>
   </data>
   <data name="YArray_GetNode_NullReferenceException" xml:space="preserve">
     <value>Failed to get a node. The result value was null.</value>
+  </data>
+  <data name="YenconException" xml:space="preserve">
+    <value>The error occurred about Yencon.</value>
   </data>
   <data name="YNode_ArgumentException" xml:space="preserve">
     <value>A parent node must be a section or an array. The parameter name: {0}</value>
