--- a/CAP.Yencon/Properties/Resources.resx
+++ b/CAP.Yencon/Properties/Resources.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidNodeNameException" xml:space="preserve">
+    <value>InvalidNodeNameException {0}</value>
+  </data>
   <data name="YArray_GetNode_ArgumentOutOfRangeException" xml:space="preserve">
     <value>YArray_GetNode_ArgumentOutOfRangeException {0} {1} {2}</value>
   </data>
   <data name="YArray_GetNode_NullReferenceException" xml:space="preserve">
     <value>YArray_GetNode_NullReferenceException</value>
+  </data>
+  <data name="YenconException" xml:space="preserve">
+    <value>YenconException</value>
   </data>
   <data name="YNode_ArgumentException" xml:space="preserve">
     <value>YNode_ArgumentException {0}</value>
