--- a/CAP.Yencon/Properties/Resources.resx
+++ b/CAP.Yencon/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
+    <value>DisposableBase_ObjectDisposedException_IsDisposing</value>
+  </data>
   <data name="InvalidNodeNameException" xml:space="preserve">
     <value>InvalidNodeNameException {0}</value>
   </data>
