--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -120,4 +120,10 @@
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>破棄中のオブジェクトは操作できません。</value>
   </data>
+  <data name="InvalidPathFormatException" xml:space="preserve">
+    <value>指定された文字列「{0}」は無効なパス文字列です。</value>
+  </data>
+  <data name="PathString_EnsureFileSystemInfo_IOException" xml:space="preserve">
+    <value>ファイルシステム情報の読み込みに失敗しました。パス：「{0}」</value>
+  </data>
 </root>
