--- a/TakymLib/Properties/Resources.resx
+++ b/TakymLib/Properties/Resources.resx
@@ -120,4 +120,10 @@
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>DisposableBase_ObjectDisposedException_IsDisposing</value>
   </data>
+  <data name="InvalidPathFormatException" xml:space="preserve">
+    <value>InvalidPathFormatException {0}</value>
+  </data>
+  <data name="PathString_EnsureFileSystemInfo_IOException" xml:space="preserve">
+    <value>PathString_EnsureFileSystemInfo_IOException {0}</value>
+  </data>
 </root>
