--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -120,6 +120,12 @@
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>破棄中のオブジェクトは操作できません。</value>
   </data>
+  <data name="ErrorHelper_EnsureWithinClosedRange" xml:space="preserve">
+    <value>値は{0}以上{1}以下でなければなりません。</value>
+  </data>
+  <data name="ErrorHelper_EnsureWithinOpenRange" xml:space="preserve">
+    <value>値は{0}超過{1}未満でなければなりません。</value>
+  </data>
   <data name="InvalidPathFormatException" xml:space="preserve">
     <value>指定された文字列「{0}」は無効なパス文字列です。</value>
   </data>
