--- a/TakymLib/Properties/Resources.en.resx
+++ b/TakymLib/Properties/Resources.en.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConsoleUtil_Pause" xml:space="preserve">
+    <value>Press any key to continue...</value>
+  </data>
+  <data name="ConsoleUtil_ReadPassword" xml:space="preserve">
+    <value>Type a password here:</value>
+  </data>
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>Cannot operate an object during disposing.</value>
   </data>
@@ -131,5 +137,11 @@
   </data>
   <data name="PathString_EnsureFileSystemInfo_IOException" xml:space="preserve">
     <value>Failed to load the file system information. The path: "{0}".</value>
+  </data>
+  <data name="SecureStringExtensions_SecurityException" xml:space="preserve">
+    <value>The unexpected exception occurred when comparing secure strings.</value>
+  </data>
+  <data name="SerializationInfoExtensions_SerializationException" xml:space="preserve">
+    <value>The unexpected exception occurred when deserializing.</value>
   </data>
 </root>
