--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConsoleUtil_Pause" xml:space="preserve">
+    <value>続行するには何かキーを押してください...</value>
+  </data>
+  <data name="ConsoleUtil_ReadPassword" xml:space="preserve">
+    <value>パスワードを入力してください：</value>
+  </data>
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>破棄中のオブジェクトは操作できません。</value>
   </data>
@@ -131,5 +137,11 @@
   </data>
   <data name="PathString_EnsureFileSystemInfo_IOException" xml:space="preserve">
     <value>ファイルシステム情報の読み込みに失敗しました。パス：「{0}」</value>
+  </data>
+  <data name="SecureStringExtensions_SecurityException" xml:space="preserve">
+    <value>セキュリティで保護された文字列の比較時に未知のエラーが発生しました。</value>
+  </data>
+  <data name="SerializationInfoExtensions_SerializationException" xml:space="preserve">
+    <value>逆直列化中に未知のエラーが発生しました。</value>
   </data>
 </root>
