--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -144,4 +144,10 @@
   <data name="SerializationInfoExtensions_SerializationException" xml:space="preserve">
     <value>逆直列化中に未知のエラーが発生しました。</value>
   </data>
+  <data name="VersionInfo_Copyright" xml:space="preserve">
+    <value>著作者情報不明</value>
+  </data>
+  <data name="VersionInfo_DisplayName" xml:space="preserve">
+    <value>製品名不明</value>
+  </data>
 </root>
