--- a/TakymLib.CommandLine/Properties/Resources.en.resx
+++ b/TakymLib.CommandLine/Properties/Resources.en.resx
@@ -117,4 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ManualBuilder_Build_Switch_Desc" xml:space="preserve">
+    <value>The switch "{0}":</value>
+  </data>
+  <data name="ManualBuilder_Build_Switch_Options" xml:space="preserve">
+    <value>Options in the switch "{0}":</value>
+  </data>
+  <data name="ManualBuilder_WriteUsage" xml:space="preserve">
+    <value>Usage&gt; {0}</value>
+  </data>
+  <data name="ManualBuilder_WriteVersion" xml:space="preserve">
+    <value>The Command-Line Argument Manuals</value>
+  </data>
 </root>
