--- a/TakymLib/Properties/Resources.en.resx
+++ b/TakymLib/Properties/Resources.en.resx
@@ -144,6 +144,9 @@
   <data name="SerializationInfoExtensions_SerializationException" xml:space="preserve">
     <value>The unexpected exception occurred when deserializing.</value>
   </data>
+  <data name="StringExtensions_ToBoolean" xml:space="preserve">
+    <value>The specified string "{0}" cannot convert to boolean value.</value>
+  </data>
   <data name="VersionInfo_Copyright" xml:space="preserve">
     <value>Unknown copyright</value>
   </data>
