--- a/TakymLibTests/Properties/Resources.resx
+++ b/TakymLibTests/Properties/Resources.resx
@@ -144,4 +144,19 @@ ManualBuilder_Build_Switch_Options /C
   <data name="PathStringToStringResult" xml:space="preserve">
     <value>C:\aaa\bbb\ccc\\ccc\\123.xyz\\123\\C:\aaa\bbb\ccc\123.xyz\\C:\aaa\bbb\ccc\123.xyz\\C:\\\file:///C:/aaa/bbb/ccc/123.xyz\\.xyz\\ABCD</value>
   </data>
+  <data name="RemoveControlCharsTests_0" xml:space="preserve">
+    <value> !"#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~</value>
+  </data>
+  <data name="RemoveControlCharsTests_1" xml:space="preserve">
+    <value>[NUL][SOH][STX][ETX][EOT][ENQ][ACK][BEL][BS]	[LF][VT][FF][CR][SO][SI][DLE][DC1][DC2][DC3][DC4][NAK][SYN][ETB][CAN][EM][SUB][ESC][FS][GS][RS][US] !"#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~[DEL][&lt;control-0080&gt;][&lt;control-0081&gt;][&lt;control-0082&gt;][&lt;control-0083&gt;][&lt;control-0084&gt;][&lt;control-0085&gt;][&lt;control-0086&gt;][CUS][NSB][NSE][FIL][PLD][PLU][ZWJ][ZWNJ][SS3][&lt;control-0090&gt;][EAB][EAE][ISB][ISE][SIB][SIE][SSB][SSE][INC][&lt;control-009A&gt;][&lt;control-009B&gt;][KWB][KWE][PSB][PSE]</value>
+  </data>
+  <data name="RemoveControlCharsTests_2" xml:space="preserve">
+    <value>␀␁␂␃␄␅␆␇␈	␊␋␌␍␎␏␐␑␒␓␔␕␖␗␘␙␚␛␜␝␞␟ !"#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~␡␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥</value>
+  </data>
+  <data name="RemoveControlCharsTests_3" xml:space="preserve">
+    <value>[NUL][SOH][STX][ETX][EOT][ENQ][ACK][BEL][BS][TAB][LF][VT][FF][CR][SO][SI][DLE][DC1][DC2][DC3][DC4][NAK][SYN][ETB][CAN][EM][SUB][ESC][FS][GS][RS][US][SPh]!"#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~[DEL][&lt;control-0080&gt;][&lt;control-0081&gt;][&lt;control-0082&gt;][&lt;control-0083&gt;][&lt;control-0084&gt;][&lt;control-0085&gt;][&lt;control-0086&gt;][CUS][NSB][NSE][FIL][TCI][ICI][OSC][SS2][SS3][&lt;control-0090&gt;][EAB][EAE][ISB][ISE][SIB][SIE][SSB][SSE][INC][&lt;control-009A&gt;][&lt;control-009B&gt;][KWB][KWE][PSB][PSE]</value>
+  </data>
+  <data name="RemoveControlCharsTests_4" xml:space="preserve">
+    <value>␀␁␂␃␄␅␆␇␈␣␊␋␌␍␎␏␐␑␒␓␔␕␖␗␘␙␚␛␜␝␞␟␠!"#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~␡␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥␥</value>
+  </data>
 </root>
