--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -147,8 +147,14 @@
   <data name="StringExtensions_ToBoolean" xml:space="preserve">
     <value>指定された文字列「{0}」を論理値へ変換する事はできません。</value>
   </data>
+  <data name="VersionInfo_Authors" xml:space="preserve">
+    <value>開発者不明</value>
+  </data>
   <data name="VersionInfo_Copyright" xml:space="preserve">
     <value>著作者情報不明</value>
+  </data>
+  <data name="VersionInfo_Description" xml:space="preserve">
+    <value>説明無し。</value>
   </data>
   <data name="VersionInfo_DisplayName" xml:space="preserve">
     <value>製品名不明</value>
