--- a/TakymLib/Properties/Resources.en.resx
+++ b/TakymLib/Properties/Resources.en.resx
@@ -147,8 +147,14 @@
   <data name="StringExtensions_ToBoolean" xml:space="preserve">
     <value>The specified string "{0}" cannot convert to boolean value.</value>
   </data>
+  <data name="VersionInfo_Authors" xml:space="preserve">
+    <value>Unknown developer</value>
+  </data>
   <data name="VersionInfo_Copyright" xml:space="preserve">
     <value>Unknown copyright</value>
+  </data>
+  <data name="VersionInfo_Description" xml:space="preserve">
+    <value>No description.</value>
   </data>
   <data name="VersionInfo_DisplayName" xml:space="preserve">
     <value>Unknown product name</value>
