--- a/TakymLib/Properties/Resources.resx
+++ b/TakymLib/Properties/Resources.resx
@@ -147,8 +147,14 @@
   <data name="StringExtensions_ToBoolean" xml:space="preserve">
     <value>StringExtensions_ToBoolean {0}</value>
   </data>
+  <data name="VersionInfo_Authors" xml:space="preserve">
+    <value>VersionInfo_Authors</value>
+  </data>
   <data name="VersionInfo_Copyright" xml:space="preserve">
     <value>VersionInfo_Copyright</value>
+  </data>
+  <data name="VersionInfo_Description" xml:space="preserve">
+    <value>VersionInfo_Description</value>
   </data>
   <data name="VersionInfo_DisplayName" xml:space="preserve">
     <value>VersionInfo_DisplayName</value>
