--- a/TakymLib/Properties/Resources.resx
+++ b/TakymLib/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AsyncEventHandlerExtensions_WrapHandler" xml:space="preserve">
+    <value>AsyncEventHandlerExtensions_WrapHandler</value>
+  </data>
   <data name="ConsoleUtil_Pause" xml:space="preserve">
     <value>ConsoleUtil_Pause</value>
   </data>
