--- a/TakymLib.Logging/Properties/Resources.en.resx
+++ b/TakymLib.Logging/Properties/Resources.en.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERB_PrintAndLog_AggregateException" xml:space="preserve">
+    <value>The unresolvable error occurred.</value>
+  </data>
+  <data name="ERB_PrintAndLog_Failed" xml:space="preserve">
+    <value>&lt;&lt;could not save&gt;&gt;</value>
+  </data>
+  <data name="ERB_PrintAndLog_Failed_Reason" xml:space="preserve">
+    <value>Warning: the log directory "{0}" is a file.</value>
+  </data>
+  <data name="ERB_PrintAndLog_PathToFile" xml:space="preserve">
+    <value>The path to log file: {0}</value>
+  </data>
   <data name="Option" xml:space="preserve">
     <value>S</value>
   </data>
