--- a/TakymLib.Logging/Properties/Resources.ja.resx
+++ b/TakymLib.Logging/Properties/Resources.ja.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERB_PrintAndLog_AggregateException" xml:space="preserve">
+    <value>修復不可能なエラーが発生しました。</value>
+  </data>
+  <data name="ERB_PrintAndLog_Failed" xml:space="preserve">
+    <value>＜＜保存できませんでした＞＞</value>
+  </data>
+  <data name="ERB_PrintAndLog_Failed_Reason" xml:space="preserve">
+    <value>警告：ログディレクトリ「{0}」はファイルです。</value>
+  </data>
+  <data name="ERB_PrintAndLog_PathToFile" xml:space="preserve">
+    <value>ログファイルのパス：{0}</value>
+  </data>
   <data name="Option" xml:space="preserve">
     <value />
   </data>
