--- a/TakymLib/Properties/Resources.en.resx
+++ b/TakymLib/Properties/Resources.en.resx
@@ -138,6 +138,15 @@
   <data name="InvalidPathFormatException" xml:space="preserve">
     <value>The specified string "{0}" is an invalid path string.</value>
   </data>
+  <data name="NameString_Constructor_ArgumentException" xml:space="preserve">
+    <value>The specified string contains an invalid character.</value>
+  </data>
+  <data name="NameString_Decode_ArgumentException" xml:space="preserve">
+    <value>The specified unsigned 8-bits integer '{0}' (0x{0:X02}) cannot decode.</value>
+  </data>
+  <data name="NameString_Encode_ArgumentException" xml:space="preserve">
+    <value>The specified character '{0}' (U+{1:X04}) cannot encode.</value>
+  </data>
   <data name="PathString_EnsureFileSystemInfo_IOException" xml:space="preserve">
     <value>Failed to load the file system information. The path: "{0}".</value>
   </data>
