--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -169,6 +169,6 @@
     <value>説明無し。</value>
   </data>
   <data name="VersionInfo_DisplayName" xml:space="preserve">
-    <value>製品名不明</value>
+    <value>無題の製品</value>
   </data>
 </root>
