--- a/Ywando/Properties/Resources.en.resx
+++ b/Ywando/Properties/Resources.en.resx
@@ -120,4 +120,13 @@
   <data name="DefaultLanguageData_Dispose_InvalidOperationException" xml:space="preserve">
     <value>The default language data is not disposable.</value>
   </data>
+  <data name="JsonLanguageData_InvalidDataException" xml:space="preserve">
+    <value>The specified JSON data is not valid language data.</value>
+  </data>
+  <data name="JsonLanguageData_LoadFileAsync_IOException" xml:space="preserve">
+    <value>Failed to load a JSON language data file "{0}". The language code is: {1}.</value>
+  </data>
+  <data name="JsonLanguageData_LoadFromDirectoryAsync_IOException" xml:space="preserve">
+    <value>Failed to load a JSON language data file from the directory "{0}". The language code is: {1}.</value>
+  </data>
 </root>
