--- a/TakymLib/Properties/Resources.ja.resx
+++ b/TakymLib/Properties/Resources.ja.resx
@@ -126,6 +126,9 @@
   <data name="ConsoleUtil_ReadPassword" xml:space="preserve">
     <value>パスワードを入力してください：</value>
   </data>
+  <data name="DisposableBase_LeaveRunLock_InvalidOperationException" xml:space="preserve">
+    <value>LeaveRunLock より前に EnterRunLock が呼び出されている必要があります。</value>
+  </data>
   <data name="DisposableBase_ObjectDisposedException_IsDisposing" xml:space="preserve">
     <value>破棄中のオブジェクトは操作できません。</value>
   </data>
