--- a/TakymLib/Properties/Resources.en.resx
+++ b/TakymLib/Properties/Resources.en.resx
@@ -174,4 +174,7 @@
   <data name="VersionInfo_DisplayName" xml:space="preserve">
     <value>Untitled product</value>
   </data>
+  <data name="VersionInfo_Edition_Debug" xml:space="preserve">
+    <value>DEBUG</value>
+  </data>
 </root>
